[package]
name = "localc"
version = "0.1.0"
authors = ["lausek <root@lausek.eu>"]
edition = "2018"
build = "build.rs"

[features]
v0-1 = []
v1-0 = ["v0-1"]

[lib]
name = "localc"
path = "src/lib.rs"

[[bin]]
name = "localc-repl"
path = "src/bin.rs"

[dependencies]
env_logger = "0.6.0"
lalrpop-util = "0.16.3"
lazy_static = "*"
log = "0.4"
rand = "0.6.0"
regex = "*"

[build-dependencies]
lalrpop = "0.16.3"
