[package]
name = "localc"
version = "0.1.0"
authors = ["lausek <root@lausek.eu>"]
edition = "2018"

[lib]
name = "localc"
path = "src/lib.rs"

[[bin]]
name = "localc-repl"
path = "src/bin.rs"

[dependencies]
lovm = { path = "../lovm" }
localc_cc = { path = "./src/cc" }
ansi_term = "0.11.0"
env_logger = "0.6.0"
regex = "*"
lazy_static = "*"
log = "0.4"
rand = "0.6.0"
